# qdrant-web-ui

./: .gitignore  package-lock.json  package.json  vite.config.js
src/components/: Notifications.jsx
src/components/FilterEditorWindow/: index.jsx
src/components/FilterEditorWindow/config/: RequestFromCode.js
src/components/VisualizeChart/: index.jsx  tsneWorker.js  wasmWorker.js
src/pages/: Visualize.jsx
wasm-bhtsne/: Cargo.toml  LICENSE_MIT  README.md  rust-toolchain.toml
wasm-bhtsne/src/: algorithm.rs  distance.rs  lib.rs  test.rs
wasm-bhtsne/src/tsne/: mod.rs  vptree.rs
wasm-tsne/: Cargo.toml  LICENSE_MIT
wasm-tsne/.cargo/: config.toml
wasm-tsne/src/: algorithm.rs  distance.rs  lib.rs  test.rs
wasm_dist_bhtsne/: Cargo.toml
wasm_dist_bhtsne/src/tsne/: mod.rs
