[package]
name = "wasm-tsne"
version = "0.1.0"
authors = ["J16N"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
ndarray = { version = "0.15.6", features = [
    "approx-0_5",
    "matrixmultiply-threading",
    "rayon",
] }
ndarray-rand = "0.14.0"
wasm-bindgen-rayon = { version = "1.2.1" }
rayon = { version = "1.9.0" }
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_distr = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
